fix: improve html semantics

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,5 +1,5 @@
 <footer class='mt-16 w-full sm:mt-4'>
-  <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1440 200'>
+  <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1440 200' aria-hidden='true' role='presentation'>
     <path
       class='scale-y-75 text-slate-200 dark:text-slate-800'
       fill='currentColor'
@@ -10,22 +10,19 @@
 
   <div class='flex flex-col items-center justify-center gap-4 bg-slate-200 py-8 dark:bg-slate-800'>
     <div class='container flex flex-col items-center gap-4'>
-      <div class='font-medium'>
-        © <span id='current-year'></span> Code by{' '}
-        <a
+      <p class='font-medium'>
+        &copy;&nbsp;<span id='current-year'></span>&nbsp;Code by&nbsp;<a
           href='https://github.com/aleksa-codes/astro-portfolio'
           target='_blank'
           rel='noopener noreferrer'
-          class='hover:underline'
-        >
-          aleksa</a
-        >{' '}• art via{' '}<a
+          class='hover:underline'>aleksa</a
+        >&nbsp;• art via&nbsp;<a
           href='https://storyset.com/'
           target='_blank'
           rel='noopener noreferrer'
           class='hover:underline'>Storyset</a
         >
-      </div>
+      </p>
       <div id='footer-message' class='mx-auto flex justify-center text-center md:flex-row'></div>
       <a href='https://astro.build' target='_blank' rel='noopener noreferrer' class='mt-6'>
         <img src='https://astro.badg.es/v2/built-with-astro/small.svg' alt='Built with Astro' width='192' height='32' />
